[aliases]
test=pytest

[metadata]
name = astromodels
description = Astromodels contains models to be used in likelihood or Bayesian analysis in astronomy
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/threeml/astromodels

author_email = giacomo.vianello@gmail.com
author = Giacomo Vianello
requires_python = >=2.7.0


project_urls =
    Documentation = https://astromodels.readthedocs.io
    Bug Tracker = https://github.com/threeML/astromodels/issues
    Source Code = https://github.com/threeML/astromodels

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console

[options]
include_package_data = True

install_requires =
    numpy>=1.6
    PyYAML==3.13
    scipy>=0.14
    astropy>=1.2
    numdifftools
    dill
    future
    interpolation	
    numba
    h5py
    
tests_require =
    pytest
    pytest-codecov


[options.extras_require]
tests =
      pytest
docs = 
      sphinx>= 1.4
      sphinx_rtd_theme
      nbsphinx
      sphinx-autoapi

# [options.packages.find]
# where = src
# exclude =
#     tests


[versioneer]
VCS=git
style=pep440
versionfile_source=astromodels/_version.py
versionfile_build=astromodels/_version.py
tag_prefix=v
parentdir_prefix=astromodels-
