[aliases]
test=pytest

[metadata]
name = astromodels
description = Astromodels contains models to be used in likelihood or Bayesian analysis in astronomy
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/threeml/astromodels

author_email = giacomo.vianello@gmail.com
author = Giacomo Vianello
requires_python = >=2.7.0


project_urls =
    Documentation = https://astromodels.readthedocs.io
    Bug Tracker = https://github.com/threeML/astromodels/issues
    Source Code = https://github.com/threeML/astromodels

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console

[options]
include_package_data = True

install_requires =
    numpy>=1.6
    PyYAML>=5.1
    scipy>=0.14
    astropy>=1.2
    dill
    future
    interpolation>=2.2.3	
    numba>0.52
    h5py
    pandas
    tables
    colorama
    omegaconf
    rich

tests_require =
    pytest
    pytest-codecov


[options.extras_require]
tests =
      pytest
docs = 
      sphinx>= 1.4
      sphinx_rtd_theme
      nbsphinx==0.8.8
      sphinx-autoapi

# [options.packages.find]
# where = src
# exclude =
#     tests


[versioneer]
VCS=git
style=pep440
versionfile_source=astromodels/_version.py
versionfile_build=astromodels/_version.py
tag_prefix=v
parentdir_prefix=astromodels-

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[flake8]
ignore = E127,E201,E202,E203,E231,E252,E266,E402,E999,F841,W503,W605,F403,F401,E741
select = C,E,F,W,B,B950
extend-ignore = E203, E501
#extend-ignore = F401 # ignore unused
max-line-length = 88
exclude = .eggs,.git,docs,scripts,examples,setup.py,ci,build,dist,versioneer.py,conftest.py,astromodels/tests,*/*.ipynb_checkpoints

per-file-ignores =
     */*__init__.py:F401
     astromodels/xspec/factory.py:W293
